font ref updated on usemin configs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,8 +11,8 @@ $bg: #424242;
 $color: #ede82c;
 
 @font-face {
-    font-family: "Din Black";
-    src: url(din_black.ttf) format("truetype");
+  font-family: "Din Black";
+  src: url(fonts/din_black.ttf) format("truetype");
 }
 
 body, html {
