--- a/app/styles/_banner.scss
+++ b/app/styles/_banner.scss
@@ -18,6 +18,8 @@
   height: 60%;
   width: 100%;
   padding: 30px 0;
+  text-align: center;
+  
 
   @media screen and (max-height: 600px)  {
     padding: 15px 0;
