--- a/app/styles/_banner.scss
+++ b/app/styles/_banner.scss
@@ -1,6 +1,25 @@
 .banner-top {
+  height: 30px;
+
+  background-image: url(../images/tri2.svg);
+  background-repeat: repeat-x;
 
 }
+
+.top-filler {
+  height: 40px;
+  overflow: visible;
+  background-color: $bg-darker;
+}
+
+.banner-bottom {
+  height: 30px;
+
+  background-image: url(../images/tri.svg);
+  background-repeat: repeat-x;
+}
+
+
 
 .triangle {
   display: inline-block;
@@ -19,7 +38,6 @@
   width: 100%;
   padding: 30px 0;
   text-align: center;
-  
 
   @media screen and (max-height: 600px)  {
     padding: 15px 0;
