color updated. icons added. room updated

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -4,18 +4,11 @@ footer {
 
   padding: 30px 50px 10px 50px;
 
-  .c50 {
-    float: left;
-    width: 50%;
-    padding: 5px;
-  }
-  .c25 {
-    float: left;
-    width: 25%;
-    padding: 10px;
-  }
-
   img {
     width: 100%;
+  }
+  .icon {
+    width: auto;
+    height: 1.2em;
   }
 }
