--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -1,21 +1,11 @@
 .content {
-  padding: 10px 50px;
+  padding: 50px 50px;
   background-color: $bg-darker;
-
-  &.first {
-    padding: 50px 0 10px 0;
-
-    .content-title {
-      border-left: none;
-      border-right: none;
-      display: block;
-    }
-  }
 }
 
 .content-title {
   padding: 10px 15px;
-  text-align: center;
+  // text-align: center;
   line-height: 1.6em;
 
   border: 3px solid $color;
@@ -29,6 +19,10 @@
   &:hover {
     background-color: lighten($bg, 5%);
   }
+}
+
+.entry {
+  margin-bottom: 20px;
 }
 
 .entry-title {
@@ -56,6 +50,8 @@
   }
 }
 
-.last {
-  padding-bottom: 50px;
+.icon {
+  height: 1em;
+  width: 1em;
+  padding-right: 5px;
 }
