--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -58,6 +58,22 @@ div {
   padding: 10px;
 }
 
+.c33 {
+  float: left;
+  width: 33%;
+  padding: 50px;
+
+  @media screen and (max-width: 768px) {
+    padding: 25px;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 15px;
+  }
+  @media screen and (max-width: 320px) {
+    padding: 5px;
+  }
+}
+
 @import "banner";
 @import "content";
 @import "footer";
